# claudifier

./: Cargo.toml  GETTING_STARTED.md  LICENSE  Makefile  README.md
Formula/: boopifier.rb  claudifier.rb
src/: config.rs  error.rs  event.rs  lib.rs  main.rs  matcher.rs
src/handlers/: desktop.rs  email.rs  mod.rs  signal.rs  sound.rs  webhook.rs
src/hooks/: compact.rs  mod.rs  notification.rs  permission.rs  prompt.rs  session.rs  stop.rs  tool_use.rs
