[package]
name = "claudifier"
version = "0.1.0"
edition = "2021"
authors = ["Terra"]
description = "Universal notification handler for Claude Code events"
license = "Apache-2.0"
repository = "https://github.com/terraboops/claudifier"
readme = "README.md"
keywords = ["claude", "notifications", "cli"]
categories = ["command-line-utilities"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "io-std", "process"] }
async-trait = "0.1"
once_cell = "1.20"

# Notification handlers
notify-rust = "4.11"                          # Desktop notifications
rodio = { version = "0.19", default-features = false, features = ["wav", "mp3", "vorbis", "flac"] }  # Sound playback
reqwest = { version = "0.12", features = ["json"] }  # HTTP/Webhooks
lettre = "0.11"                                # Email

# Event matching
serde_path_to_error = "0.1"                    # Better error messages for JSON parsing

# Utilities
shellexpand = "3.1"                            # Tilde expansion for file paths
rand = "0.8"                                   # Random number generation
chrono = "0.4"                                 # Date/time for logging
regex = "1.11"                                 # Regular expression matching
glob = "0.3"                                   # Path pattern matching

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"

[lib]
name = "claudifier"
path = "src/lib.rs"

[[bin]]
name = "claudifier"
path = "src/main.rs"
